Added type spinner + fixed image upload + approve logic